modify git hub link
modify git hub link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="secondary-info ml-md-auto mt-2">
 							<ul class="resume-social list-unstyled">
 								<li class="mb-3"><a href="https://www.linkedin.com/in/jhamman-sharma/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/jhamman-sharma</a></li>
-								<li class="mb-3"><a href="https://jhamman-sharma.github.io/about-me/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/jhamman-sharma</a></li>
+								<li class="mb-3"><a href="https://jhamman-sharma.github.io/about/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/jhamman-sharma</a></li>
 								<!-- <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span>codepen.io/username/</a></li> -->
 								<!-- <li><a href="#"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>yourwebsite.com</a></li> -->
 							</ul>
