--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 												<h3 class="resume-position-title font-weight-bold mb-1">Tech Lead</h3>
 												<div class="resume-company-name ml-auto">Client: BTS | Payroll Company:  Pegasus Infocorp</div>
 											</div><!--//row-->
-											<div class="resume-position-time">Jun-2019 - Present</div>
+											<div class="resume-position-time">Jun-2019 - Apr-2020</div>
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
 										
