--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 												<h3 class="resume-position-title font-weight-bold mb-1">Sr. Associate Consultant</h3>
 												<div class="resume-company-name ml-auto">Client : Crisil  | Payroll company: Infrasofttech</div>
 											</div><!--//row-->
-											<div class="resume-position-time">Aug-2018 - Present</div>
+											<div class="resume-position-time">Aug-2018 - May-2019</div>
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
 											
