--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="#">
 									<i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>
-									jhammansharma23@gmail.com,  jhammansharma@hotmail.com 
+									jhammansharma23@gmail.com
+									<!-- jhammansharma@hotmail.com  -->
 									<!-- <br> <span style="padding-left: 28px;">jhammansharma@hotmail.com</span> -->
 								</a></li>
-								<li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7887560119 , 7387160770</a></li>
+								<li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7887560119</a></li>
 							</ul>
 						</div><!--//primary-info-->
 						<div class="secondary-info ml-md-auto mt-2">
@@ -63,22 +64,18 @@
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
 						<ul class="mb-0">
-							<li>Sr. software Developer with 6+ years of experience in developing highly scalable software solutions.
+							<li>Technical Lead with 7 years of experience in developing highly scalable software solutions.
 								working on All Phases of Software Development Life Cycle  from requirement gathering and analysis to  Designing   , Implementation the  code 
 								, Testing  and deploying to server.
 							</li>
-							<li>Strong proficiency with JavaScript(ES6, typescript) and javascript framework (like angularjs , angular) and libray(react,jquery, Socket.IO,  brickjs(library created by me)) </li>
+							<li>Strong proficiency with JavaScript(ES6, typescript) and javascript framework (like angularjs , angular) and libray(react,jquery, Socket.IO etc) </li>
 							<li>Good Knowledge of Node.js and frameworks available for it (such as Express, sailsjs, StrongLoop etc) </li>
-							<li>Good Knowledge of middleware (such as Passport,	 body-parser, morgan,session etc ) </li>
-							<li>Understanding the nature of asynchronous programming and its quirks and workarounds </li>
-							<li>Good understanding of server-side templating languages (such as pug(Jade), EJS etc ) </li>
-							<li>Knowledge of php and frameworks available frameworks for it (such as laravel, CodeIgniter etc) </li>
-							<li>Knowledge of C# &.net mvc </li>
-							<li>Intermediate In java & kotlin  </li>
-							<li>Knowledge of relational database (such as mysql , sql server) and Non-relational databases(such as MongoDB) </li>
+							<li>Good understanding of php and frameworks available frameworks for it (such as laravel, CodeIgniter etc) </li>
+							<li>Good understanding of C# &.net mvc </li>
+							<li>Knowledge of java & kotlin and frameworks available for it (such as SpringBoot etc)</li>
+							<li>Good understanding of relational database (such as mysql , sql server) and Non-relational databases(such as MongoDB) </li>
 							<li>Good understanding of server-side CSS preprocessors (such as scss, stylus, Less, etc ) </li>
 							<li>Good understanding of front-end technologies, such as HTML5, and CSS3(frameworks like bootstrap, foundation, brick(framework created by me) etc) </li>
-							<li>Proficient understanding of JavaScript package managaer (such as npm , bower, yarn) </li>
 							<li>Good Understanding of User authentication and authorization between multiple systems, servers, and environments </li>
 							<li>Good Understanding of fundamental design principles behind a scalable application </li>
 							<li>Good Understanding of differences between multiple delivery platforms, such as mobile vs. desktop, and optimizing output to match the specific platform </li>
@@ -149,37 +146,6 @@
 
 											</div>
 
-											<br>
-											<br>
-											<div class="project">
-												<h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : Momenta</h4>
-												<h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>												
-												<p class="project-description">
-													<ul>
-															
-															<li>Assessment Management System providing a communication and resource hub for all of the institution's outcomes assessment and continuous improvement initiatives </li>
-														</li>
-														<li>Organizational planning and reporting</li>
-														<li>Online assessment plan creation and review</li>
-														
-													</ul>
-												</p>	
-
-												<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-												<ul class="list-inline">
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular(v8)</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML5/CSS3/SASS</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular Material</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">node js (with Typescript) & microservices</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">mongodb</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">docker</span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">amazon s3 & EC2</span></li>
-
-												</ul>
-
-											</div>
-
-
 										</div><!--//resume-timeline-item-desc-->
 									</article><!--//resume-timeline-item-->
 
@@ -188,7 +154,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Tech Lead</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1">Technical Lead</h3>
 												<div class="resume-company-name ml-auto">Client: BTS | Payroll Company:  Pegasus Infocorp</div>
 											</div><!--//row-->
 											<div class="resume-position-time">Jun-2019 - Apr-2020</div>
@@ -648,17 +614,17 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">JavaScript (ES5, ES2015, ES2017)</div>
+											<div class="resume-skill-name">JavaScript (ES5, ES6, ES2017)</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 										</li>
-										<li class="mb-2">
+										<!-- <li class="mb-2">
 											<div class="resume-skill-name">jquery (JavaScript library)</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-										</li>
+										</li> -->
 										<li class="mb-2">
 											<div class="resume-skill-name">AngularJs (JavaScript framework)</div>
 											<div class="progress resume-progress">
@@ -671,12 +637,12 @@
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 										</li>
-										<li class="mb-2">
+										<!-- <li class="mb-2">
 											<div class="resume-skill-name">React</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-										</li>
+										</li> -->
 
 										<li class="mb-2">
 											<div class="resume-skill-name">Vuejs</div>
@@ -713,12 +679,12 @@
 											</div>
 										</li>
 
-										<li class="mb-2">
+										<!-- <li class="mb-2">
 											<div class="resume-skill-name">Foundation(css framework)</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-										</li>
+										</li> -->
 
 
 
@@ -765,18 +731,18 @@
 										</li>
 
 										<li class="mb-2">
-											<div class="resume-skill-name">Laravel (PHP framework)</div>
+											<div class="resume-skill-name">Laravel, CodeIgniter (PHP framework)</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 										</li>
 
-										<li class="mb-2">
-											<div class="resume-skill-name">CodeIgniter (PHP framework)</div>
-											<div class="progress resume-progress">
-												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-										</li>
+											<!-- <li class="mb-2">
+												<div class="resume-skill-name">CodeIgniter (PHP framework)</div>
+												<div class="progress resume-progress">
+													<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+												</div>
+											</li> -->
 
 										<li class="mb-2">
 											<div class="resume-skill-name">C# & .net</div>
@@ -785,12 +751,12 @@
 											</div>
 										</li>
 
-										<li class="mb-2">
+										<!-- <li class="mb-2">
 											<div class="resume-skill-name"> C & C++</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-										</li>
+										</li> -->
 
 									</ul>
 								</div><!--//resume-skill-item-->
