--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 								working on All Phases of Software Development Life Cycle  from requirement gathering and analysis to  Designing   , Implementation the  code 
 								, Testing  and deploying to server.
 							</li>
-							<li>Strong proficiency with JavaScript(ES6, typescript) and javascript framework (like angularjs , angular) and libray(react,jquery, Socket.IO etc) </li>
+							<li>Strong proficiency with JavaScript(ES6, ES2017, typescript) and javascript framework (like angularjs , angular) and libray(react,jquery, Socket.IO etc) </li>
 							<li>Good Knowledge of Node.js and frameworks available for it (such as Express, sailsjs, StrongLoop etc) </li>
+							<li>Knowledge of java & kotlin and frameworks available for it (such as SpringBoot etc)</li>
 							<li>Good understanding of php and frameworks available frameworks for it (such as laravel, CodeIgniter etc) </li>
 							<li>Good understanding of C# &.net mvc </li>
-							<li>Knowledge of java & kotlin and frameworks available for it (such as SpringBoot etc)</li>
 							<li>Good understanding of relational database (such as mysql , sql server) and Non-relational databases(such as MongoDB) </li>
 							<li>Good understanding of server-side CSS preprocessors (such as scss, stylus, Less, etc ) </li>
 							<li>Good understanding of front-end technologies, such as HTML5, and CSS3(frameworks like bootstrap, foundation, brick(framework created by me) etc) </li>
@@ -141,7 +141,9 @@
 													<li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML5/CSS3/SCSS</span></li>
 													<li class="list-inline-item"><span class="badge badge-primary badge-pill">mysql </span></li>
 													<li class="list-inline-item"><span class="badge badge-primary badge-pill">redis </span></li>
-													<li class="list-inline-item"><span class="badge badge-primary badge-pill">docker</span></li>
+													<li class="list-inline-item"><span class="badge badge-primary badge-pill">docker & kubernetes</span></li>
+													<li class="list-inline-item"><span class="badge badge-primary badge-pill">kafka</span></li>
+													<li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS s3 , ec2 , arora db </span></li>
 												</ul>
 
 											</div>
